Completar funcionalidades de la API de recetas según enunciado